app/assets/stylesheets/custom.css.scss
@import "bootstrap";

/* Variables */

$grayLight: #777;

/* universal */

html {
  overflow-y: scroll;
}

body {
  padding-top: 60px;
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

/* Spacing & Alignment */

.clear {
	clear: both;
}

.center {
  text-align: center;
}

.float-right {
	float: right;
}

.float-left {
	float: left;
}

.top-pad {
	margin-top: 35px;
}

.top-pad-10 {
	margin-top: 10px;
}

.top-pad50 {
	margin-top: 50px;
}

.wrapper {
	width: 100%;
	text-align: center;
	clear: both;
}

/* Typography */

h1 {
	text-align: center;
	font-family: 'Lato', sans-serif;
	font-weight: 900;
	clear: both;
}

/* Header */

.container { height: 5em; }

.custom-header {
	background-color: #B2D583;
	border-bottom: 5px solid #8CC147;
	vertical-align: middle;
}

#logo {
	color: white;
	font-family: 'Lato', sans-serif;
	font-weight: 900;
	font-size: 32px;
	padding-top: 25px;
}

.nav li {
		margin-top:10px;
		font-size: 1.1em;
}

.alert-badge {
	position: absolute;
	margin: 3px 0 0 88px;
	font-size: 10px;
	text-align: center;
	color: white;
	background: #E34242;
	width: 18px;
	height: 18px;
	border: 2px solid white;
	border-radius: 100%;
}

/* Buttons */

.btn {
  a:link {color:#FF0000;}
  a:visited {color:#00FF00;}
}

.btn-spacer {
	margin: 50px 0 0 20px;
}

.delete-btn {
	float: right;
	margin: 50px 50px 0 0;
}

.transparent-btn {
	border: none;
	background: none;
	margin: 0;
	padding: 0;
}

/* Forms */

input, textarea, select, .uneditable-input {
  border: 1px solid #CFCFCF;
  border-radius: 5px;
  padding: 5px;
  margin: 7px 0;
  /* @include box_sizing; */
} 

.control-label {
	margin-top: 8px;
}

.form-spacer {
	margin-bottom: 40px;
	display: block;
	clear: both;
}

/* Set Date for logs/index */

.date-select {
	float: right;
	margin:35px 0 0 0;
}

.date-select-icon {
	
}


.today-btn {
	float: right;
	margin: 85px -222px 0 0;
	font-size: .8em;
	color: #428bca;
}

/* Cases date on index page */
.index-case-title {
	clear: both;
	margin: 0 auto 0 auto;
	display: inline-block;
	font-family: 'Lato', sans-serif;
	font-weight: 900;
}

.index-case-date {

	font-size: 2.5em;
	float: left;
}

.yesterday-btn {
	float: left;
	margin: 0 15px 0 0;
	font-size: 2.5em;
	color: #428bca;
}

.tomorrow-btn {
	float: left;
	margin-left: 15px;
	font-size: 2.5em;
	color: #428bca;
}

.case-count {
	clear: both;
	font-style: italic;
	color: $grayLight;
	text-align: center;
}

/* Cases table */

.col-time {
	width: 85px;
}

.col-person {
	white-space: nowrap;
}

.col-tags {
	width: 100px;
}

.highlight-red {
	background-color: #FF8A8A;
	border-radius: 2px;
	padding: 3px;
}
.highlight-yellow {
	background-color: #FFF154;
	border: 1px dashed #858585;
	border-radius: 4px;
	width: 21px;
	padding: 3px 5px;
	cursor: default;
	z-index: 1;
}

.tooltipster {
	opacity: 1;
}

.tooltipster-punk {
	border-radius: 5px; 
	border-bottom: 3px solid #8CC147;
	background: #2a2a2a;
	color: #fff;
}
.tooltipster-punk .tooltipster-content {
	font-size: 14px;
	line-height: 16px;
	padding: 8px 10px;
}

/* tags */

.chosen-choices {
  border: 1px solid #CFCFCF;
  border-radius: 5px;
  padding: 5px;
  margin: 7px 0;
}

.tags {
	ul {
	}

	li {
		list-style-type: none;
		margin: 2px 0 2px -40px;
		padding: 2px 4px 2px 4px;
		font-size: 0.8em;
		color: white;
		background-color: $grayLight;
		border-radius:4px;
		display: inline-block;
		white-space: nowrap;
	}

	li:before {
		background: #fff;
    	width: 6px;
    	height: 6px;
    	content: "";
    	display: inline-block;
    	border-radius: 20px;
    	margin: 0 5px 0 0;
	}
}

